<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8EC582"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FragmentAdd">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/id_input"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_dance_element_id_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp"
        android:inputType="numberPassword"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/in_name_dance"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_dance_name_element_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/in_date"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/add_dance_is_modern"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="15dp" />

    <Button
        android:id="@+id/ok_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ok" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" />

</LinearLayout>